<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.iamnotafondrik.notesmanager.NotesListActivity">
    <item android:title="@string/sorting"
        android:id="@+id/action_sorting"
        android:icon="@drawable/ic_sort"
        android:visible="true"
        android:orderInCategory="1"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">

        <menu >
            <group>
                <item
                    android:id="@+id/sorting_note_by_order"
                    android:title="@string/by_order"
                    android:orderInCategory="200" />
                <item
                    android:id="@+id/sorting_note_by_group"
                    android:title="@string/by_groups"
                    android:orderInCategory="300" />
                <item
                    android:id="@+id/sorting_note_by_date"
                    android:title="@string/by_date"
                    android:orderInCategory="400" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always" />
</menu>
